[gd_scene load_steps=21 format=3 uid="uid://wwe1ojobhi71"]

[ext_resource type="Script" path="res://environment/environment.gd" id="1_c4stx"]
[ext_resource type="Material" uid="uid://cnnhv5mwin3tm" path="res://environment/mage_billboard_material.tres" id="2_321os"]
[ext_resource type="PackedScene" uid="uid://da2xdlh66qcg7" path="res://environment/Wall.glb" id="2_dyitu"]
[ext_resource type="PackedScene" uid="uid://c5gmgjo0lqr3t" path="res://environment/win_animation/win_animation_scene.tscn" id="2_hbdu1"]
[ext_resource type="PackedScene" uid="uid://b40j3r10ixkal" path="res://environment/floor.glb" id="2_wtw0m"]
[ext_resource type="PackedScene" uid="uid://dxitsec5pp67h" path="res://environment/Pentagram Table.glb" id="3_1oegr"]
[ext_resource type="Script" path="res://environment/billboard.gd" id="3_ee5kh"]
[ext_resource type="Material" uid="uid://0i3kxhgxppcg" path="res://post-processing/pentagram_material.tres" id="5_4y8s5"]
[ext_resource type="Material" uid="uid://cca7a0l7ulmd" path="res://post-processing/storm_material.tres" id="6_804ct"]
[ext_resource type="PackedScene" uid="uid://cpftgwfki4n16" path="res://environment/bookshelf filled 1.glb" id="10_26q08"]
[ext_resource type="PackedScene" uid="uid://bgc8ijvhm5vf0" path="res://environment/bookshelf filled 2.glb" id="11_30u5s"]
[ext_resource type="PackedScene" uid="uid://cs2nfotm4ai17" path="res://environment/stool.glb" id="12_sea02"]

[sub_resource type="ViewportTexture" id="ViewportTexture_l3c4r"]
viewport_path = NodePath("WinAnimationBillboard/SubViewport")

[sub_resource type="Curve3D" id="Curve3D_pj54b"]
_data = {
"points": PackedVector3Array(0, 0.233789, 3.04667, 0, -0.233789, -3.04667, 0.00366211, 2.23651, 9.49927, 0, 0.341045, 0.852647, 0, -0.341045, -0.852647, -0.000610352, 1.42455, 5.06643, 0, 0.426818, 1.2686, 0, -0.426818, -1.2686, -0.026123, 0.34983, 2.83204, 0, 0, 0, 0, 0, 0, 0.000456247, -1.90735e-06, 0.296077),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="PlaneMesh" id="PlaneMesh_toryi"]
material = ExtResource("2_321os")
size = Vector2(3.5, 7)
orientation = 2

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ywikl"]
sky_top_color = Color(0.00392157, 0, 0.0627451, 1)
sky_horizon_color = Color(0.0313726, 0, 0.27451, 1)
sky_curve = 0.172305
sky_cover_modulate = Color(0.0768358, 0.0768358, 0.0768358, 1)
ground_bottom_color = Color(0.141176, 0.117647, 0.0901961, 1)
ground_horizon_color = Color(0.0901961, 0.0941176, 0.0980392, 1)

[sub_resource type="Sky" id="Sky_anvrc"]
sky_material = SubResource("ProceduralSkyMaterial_ywikl")

[sub_resource type="Environment" id="Environment_enxjm"]
background_mode = 2
sky = SubResource("Sky_anvrc")
ambient_light_source = 3
ambient_light_color = Color(0.211765, 0.435294, 0.996078, 1)
ambient_light_energy = 3.1
tonemap_mode = 3
fog_enabled = true
fog_light_energy = 0.11

[sub_resource type="CylinderMesh" id="CylinderMesh_qw3t7"]

[sub_resource type="CylinderMesh" id="CylinderMesh_3vo8l"]

[node name="Environment" type="Node3D"]
script = ExtResource("1_c4stx")

[node name="WinAnimationBillboard" type="Sprite3D" parent="."]
transform = Transform3D(-18, -0.00142123, -0.00640438, -3.12891e-09, 17.5718, -3.89975, 0.00656018, -3.89959, -17.5725, 0, 2.73, 0)
flip_h = true
pixel_size = 0.0001
texture = SubResource("ViewportTexture_l3c4r")
script = ExtResource("3_ee5kh")

[node name="SubViewport" type="SubViewport" parent="WinAnimationBillboard"]
transparent_bg = true
size = Vector2i(1920, 360)

[node name="WinAnimationScene" parent="WinAnimationBillboard/SubViewport" instance=ExtResource("2_hbdu1")]
unique_name_in_owner = true

[node name="Camera" type="Node" parent="."]

[node name="CameraOrigin" type="Node3D" parent="Camera"]
unique_name_in_owner = true

[node name="CameraPath" type="Path3D" parent="Camera/CameraOrigin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.7229, 0.546591)
curve = SubResource("Curve3D_pj54b")

[node name="PathFollow3D" type="PathFollow3D" parent="Camera/CameraOrigin/CameraPath"]
unique_name_in_owner = true
transform = Transform3D(0.999975, 0, 0, 0, 0.997043, 0.0765092, 0, -0.076509, 0.997046, 0.00366211, 2.23651, 9.49927)
loop = false

[node name="Camera3D" type="Camera3D" parent="Camera/CameraOrigin/CameraPath/PathFollow3D"]
unique_name_in_owner = true
transform = Transform3D(1.00001, 0, 0, 0, 0.997079, -0.076512, 0, 0.076512, 0.997079, 0, 0, 0)
current = true
near = 0.1

[node name="CameraFocus" type="Marker3D" parent="Camera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.50482, 0)

[node name="TableLamp" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5306, 0)
light_color = Color(1, 0.396078, 0.329412, 1)
light_energy = 5.097
light_indirect_energy = 1.415
light_volumetric_fog_energy = 1.646
light_size = 9.32
light_specular = 0.0
light_bake_mode = 1
omni_range = 14.905

[node name="WindowLamp1" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.8551, 2.88713, 2.26532)
light_color = Color(0.419608, 0.72549, 0.831373, 1)
light_energy = 1.666
light_indirect_energy = 5.0
light_volumetric_fog_energy = 1.035
omni_range = 380.546

[node name="WindowLamp2" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.12955, 4.41342, 12.9624)
light_color = Color(0.419608, 0.72549, 0.831373, 1)
light_energy = 1.666
light_indirect_energy = 5.0
light_volumetric_fog_energy = 1.035
omni_range = 380.546

[node name="WindowLamp3" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.4458, 2.20671, 1.79839)
light_color = Color(0.419608, 0.72549, 0.831373, 1)
light_energy = 5.166
light_indirect_energy = 5.0
light_volumetric_fog_energy = 1.035
omni_range = 380.546

[node name="WindowLamp4" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.17406, 1.10336, -9.72679)
light_color = Color(0.419608, 0.72549, 0.831373, 1)
light_energy = 8.5
light_indirect_energy = 5.0
light_volumetric_fog_energy = 1.035
omni_range = 380.546

[node name="MageBillboard" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, -3.2783e-07, 0, 3.2783e-07, 1, -4.13631, 3.18302, 4.47334)
mesh = SubResource("PlaneMesh_toryi")
skeleton = NodePath("")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.766534, -0.22865, 0.600121, 0.0890689, 0.963291, 0.253253, -0.635997, -0.140675, 0.758761, 14.8818, 9.52332, 11.2878)
light_color = Color(0.309804, 0.592157, 0.94902, 1)
light_energy = 12.167
shadow_enabled = true
shadow_reverse_cull_face = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_enxjm")

[node name="floor" parent="." instance=ExtResource("2_wtw0m")]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 10, 0)

[node name="Pentagram Table" parent="." instance=ExtResource("3_1oegr")]
transform = Transform3D(2, 0, 0, 0, 3, 0, 0, 0, 2, 0, 0, 0)

[node name="Wall" parent="." instance=ExtResource("2_dyitu")]
transform = Transform3D(1.5, 0, 0, 0, 1.2, 0, 0, 0, 1.5, 0, 10.6648, 0)

[node name="vfx" type="Node" parent="."]

[node name="Pentagram" type="MeshInstance3D" parent="vfx"]
unique_name_in_owner = true
transform = Transform3D(8, 0, 0, 0, 2, 0, 0, 0, 8, 0, 4.23614, 0)
material_override = ExtResource("5_4y8s5")
cast_shadow = 0
mesh = SubResource("CylinderMesh_qw3t7")

[node name="Storm" type="MeshInstance3D" parent="vfx"]
unique_name_in_owner = true
transform = Transform3D(19, 0, 0, 0, 5, 0, 0, 0, 19, 0, 5.1, 0)
material_override = ExtResource("6_804ct")
cast_shadow = 0
mesh = SubResource("CylinderMesh_3vo8l")

[node name="LaserOrigin" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.39499, 0)

[node name="Bookshelf1" parent="." instance=ExtResource("10_26q08")]
transform = Transform3D(0.747079, 0, 0.664735, 0, 1, 0, -0.664735, 0, 0.747079, -19.4391, 0, -0.261867)

[node name="Bookshelf1" parent="Bookshelf1" instance=ExtResource("10_26q08")]
transform = Transform3D(-0.999837, 0, -0.0180806, 0, 1, 0, 0.0180806, 0, -0.999837, 26.5192, 0, 26.3111)

[node name="Bookshelf2" parent="." instance=ExtResource("11_30u5s")]
transform = Transform3D(0.987873, 0, -0.155262, 0, 1, 0, 0.155262, 0, 0.987873, 3.92392, 0, -12.4985)

[node name="Stool" parent="." instance=ExtResource("12_sea02")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.98853, 0, -11.6853)

[node name="Stool" parent="Stool" instance=ExtResource("12_sea02")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.67887, 0, 23.7918)
